--- a/paper.tex
+++ b/paper.tex
@@ -44,7 +44,7 @@ Focus on making client development easy.
 Well defined, concrete interface.
 Static interface.
 
-There are several large exisiting open source hardware interface projects [cite EPICS, TANGOS, pymodaq, other].
+There are several large exisiting open source hardware interface projects, such as EPICS \cite{DalesioLR1991a}, TANGO \cite{tango-controls.org}, and pymodaq \cite{WeberSebastien2021a}.
 These projects are impressive at facility scale, but in our experience these do not scale well to single-investigator lab environments.
 We have aimed to keep yaq as simple as possible, with the goal of staying easy to manage at very small scales without dedicated staff.
 Certainly yaq lacks features compared to these exisiting projects, as we will highlight.
@@ -106,8 +106,13 @@ Mixing with other hand built or commercially derived software.
 
 \subsubsection{Bluesky}
 
+Bluesky is an extensive open source control layer \cite{AllanDanielB2019a}.
 Bridging to larger open source control layers.
 
 \section{Conclusions}
+
+\clearpage
+\bibliographystyle{unsrt}
+\bibliography{references}
 
 \end{document}
