--- a/paper.tex
+++ b/paper.tex
@@ -62,7 +62,13 @@ yaq is not opinonated about orchestration layer.
 
 TCP
 
+\subsection{TCP}
+
+\subsection{Avro RPC}
+
 AVRO-RPC
+
+\subsection{Configuration and State}
 
 configuration
 
@@ -72,21 +78,34 @@ Daemon roundup.
 
 Discussion of traits and purpose of compositional approach.
 
+\subsection{Traits}
+
+Graphic of traits?
+
+Examples of daemons for core traits.
+
+Fakeable.
+
 \section{Clients}
 
 A few ``short stories'' of particular instruments utilizing yaq.
 
-Fakeable.
-
-\subsubsection{yaqc}
+\subsection{yaqc}
 
 Lightweight scriptable.
 
-\subsubsection{yaqc-qtpy}
+\subsection{yaqc-qtpy}
 
 Capitalizes heavily on traits
 
-\subsubsection{Stahl}
+\subsection{Bluesky}
+
+Bluesky is an extensive open source control layer \cite{AllanDanielB2019a}.
+Bridging to larger open source control layers.
+
+\section{Case Studies}
+
+\subsection{Stahl}
 
 Self contained ecosystem on a raspberry pi.
 
@@ -96,18 +115,7 @@ Exceedingly simple.
 
 (reference publication)
 
-\subsubsection{Landis}
-
-....
-
-\subsubsection{Goldsmith}
-
-Mixing with other hand built or commercially derived software.
-
-\subsubsection{Bluesky}
-
-Bluesky is an extensive open source control layer \cite{AllanDanielB2019a}.
-Bridging to larger open source control layers.
+\subsection{Wright}
 
 \section{Conclusions}
 
