--- a/references.bib
+++ b/references.bib
@@ -23,6 +23,22 @@
   year =	 1991,
 }
 
+@article{SalazarChaseA2021a,
+  doi =		 {10.1063/5.0043007},
+  year =	 2021,
+  month =	 apr,
+  publisher =	 {{AIP} Publishing},
+  volume =	 92,
+  number =	 4,
+  pages =	 044103,
+  author =	 {Chase A. Salazar and Blaise J. Thompson and Spring
+                  M. M. Knapp and Steven R. Myers and Shannon
+                  S. Stahl},
+  title =	 {Multichannel gas-uptake/evolution reactor for
+                  monitoring liquid-phase chemical reactions},
+  journal =	 {Review of Scientific Instruments}
+}
+
 @article{WeberSebastien2021a,
   doi =		 {10.1063/5.0032116},
   year =	 2021,
