--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,38 @@
+@phdthesis{MeyerKentAlbert2004b,
+  author =	 {Kent Albert Meyer},
+  title =	 {Freqncy-Scanned Ultrafast Spectroscopic Techniques
+                  Applied to Infrared Four-Wave Mixing Spectroscopy},
+  school =	 {University of Wisconsin--Madison},
+  year =	 2004,
+}
+
+@phdthesis{CarlsonRogerJohn1988a,
+  author =       {Roger John Carlson},
+  school =       {University of Wisconsin-Madison},
+  title =        {Quantitative Aspects of High Resolution, Fully Resonant, Four-Wave Mixing
+                  Spectroscopy For the Analysis of Vibronic Mode Coupling in Molecules},
+  year =         1988,
+}
+
+@phdthesis{ThompsonBlaiseJonathan2018a,
+  author =	 {Thompson, Blaise Jonathan},
+  title =	 {Development of Frequency Domain Multidimensional
+                  Spectroscopy with Applications in Semiconductor
+                  Photophysics},
+  school =	 {University of Wisconsin--Madison},
+  year =	 2018,
+}
+
+@phdthesis{KainSchuyler2017a,
+  author =	 {Kain, Schuyler},
+  title =	 {Transition of Frequency-Domain Coherent
+                  Multidimensional Spectroscopic Methods to the
+                  Femtosecond Time Regime with Applications to
+                  Nanoscale Semiconductors},
+  school =	 {University of Wisconsin--Madison},
+  year =	 2017,
+}
+
 @article{AllanDanielB2019a,
   doi =		 {10.1080/08940886.2019.1608121},
   year =	 2019,
@@ -21,6 +56,22 @@
   jouranl =	 {ICALEPCS},
   volume =	 91,
   year =	 1991,
+}
+
+@article{MukamelShaul2000a,
+  author =	 {Mukamel, Shaul},
+  title =	 {Multidimensional Femtosecond Correlation
+                  Spectroscopies of Electronic and Vibrational
+                  Excitations},
+  journal =	 {Annual Review of Physical Chemistry},
+  year =	 2000,
+  volume =	 51,
+  number =	 1,
+  pages =	 {691--729},
+  month =	 oct,
+  url =		 {https://doi.org/10.1146/annurev.physchem.51.1.691},
+  doi =		 {10.1146/annurev.physchem.51.1.691},
+  publisher =	 {Annual Reviews},
 }
 
 @article{SalazarChaseA2021a,
@@ -51,6 +102,19 @@
   title =	 {{PyMoDAQ}: An open-source Python-based software for
                   modular data acquisition},
   journal =	 {Review of Scientific Instruments}
+}
+
+@article{WrightJohnCurtis2011a,
+  author =	 {Wright, John C.},
+  title =	 {Multiresonant Coherent Multidimensional
+                  Spectroscopy},
+  journal =	 {Annual Review of Physical Chemistry},
+  year =	 2011,
+  volume =	 62,
+  number =	 1,
+  pages =	 {209--230},
+  month =	 may,
+  doi =		 {10.1146/annurev-physchem-032210-103551},
 }
 
 @misc{tango-controls.org,
