Add references to references.bib

--- a/references.bib
+++ b/references.bib
@@ -122,3 +122,120 @@
   date =	 {2022-04-01},
   url =		 {https://www.tango-controls.org/}
 }
+@inproceedings{AGotz1999TANGOA,
+ author = {Chaize, J-M. and G¨otz, A. and Meyer, J. and Pérez, María and Taurel, E.},
+ title = {TANGO - AN OBJECT ORIENTED CONTROL SYSTEM BASED ON CORBA},
+ year = {1999},
+ booktitle = {ICALEPCS}
+}
+
+@article{AllanDanielB2019a,
+ author = {Allan, Daniel and Caswell, Thomas and Campbell, Stuart and Rakitin, Maksim},
+ title = {Bluesky′s Ahead: A Multi-Facility
+Collaboration for an a la Carte Software Project for
+Data Acquisition and Management},
+ journal = {Synchrotron Radiation News},
+ publisher = {Informa UK Limited},
+ year = {2019},
+ month = {May},
+ number = {3},
+ volume = {32},
+ pages = {19--22},
+ doi = {10.1080/08940886.2019.1608121}
+}
+
+@article{Arkilic2015,
+ author = {Arkilic, Arman and Allan, Daniel and Chabot, Daron and Dalesio, Leo and Lewis, Wayne},
+ title = {Databroker: An Interface for NSLS-II Data Management System},
+ journal = {Proceedings of the 15th Int. Conf. on Accelerator and Large Experimental Physics Control Systems},
+ publisher = {JACoW, Geneva, Switzerland},
+ year = {2015},
+ volume = {ICALEPCS2015},
+ pages = {Australia},
+ url = {http://accelconf.web.cern.ch/AccelConf/DOI/ICALEPCS2015/JACoW-ICALEPCS2015-WED3O02.html},
+ doi = {10.18429/JACOW-ICALEPCS2015-WED3O02},
+ copyright = {CC 3.0},
+ keyword = {Accelerator Physics, Data Management, Analytics &amp, Visualisation},
+ language = {en}
+}
+
+@article{Arkilic_2017,
+ author = {Arkilic, A. and Allan, D. B. and Caswell, T. A. and Li, L. and Lauer, K. and Abeykoon, S.},
+ title = {Towards Integrated Facility-Wide Data Acquisition and Analysis at NSLS-II},
+ journal = {Synchrotron Radiation News},
+ publisher = {Informa UK Limited},
+ year = {2017},
+ month = {mar},
+ number = {2},
+ volume = {30},
+ pages = {44--45},
+ url = {https://doi.org/10.1080%2F08940886.2017.1289810},
+ doi = {10.1080/08940886.2017.1289810}
+}
+
+@article{DalesioLR1991a,
+ author = {Dalesio, L. R. and Kraimer, M. R. and Kozubal, A. J.},
+ title = {EPICS Architecture},
+ year = {1991},
+ volume = {91},
+ jouranl = {ICALEPCS}
+}
+
+@article{Koerner_2019,
+ author = {Koerner, Lucas},
+ title = {Instrbuilder: A Python package for electrical instrument control},
+ journal = {Journal of Open Source Software},
+ publisher = {The Open Journal},
+ year = {2019},
+ month = {apr},
+ number = {36},
+ volume = {4},
+ pages = {1172},
+ url = {https://doi.org/10.21105%2Fjoss.01172},
+ doi = {10.21105/joss.01172}
+}
+
+@article{Koerner_2020,
+ author = {Koerner, Lucas J. and Caswell, Thomas A. and Allan, Daniel B. and Campbell, Stuart I.},
+ title = {A Python Instrument Control and Data Acquisition Suite for Reproducible Research},
+ journal = {IEEE Transactions on Instrumentation and Measurement},
+ publisher = {Institute of Electrical and Electronics Engineers (IEEE)},
+ year = {2020},
+ month = {apr},
+ number = {4},
+ volume = {69},
+ pages = {1698--1707},
+ url = {https://doi.org/10.1109%2Ftim.2019.2914711},
+ doi = {10.1109/tim.2019.2914711}
+}
+
+@article{Lauer2020,
+ author = {Lauer, Kenneth},
+ title = {ophyd Devices: Imposing Hierarchy on the Flat EPICS V3 Namespace},
+ journal = {Proceedings of the 17th International Conference on Accelerator and Large Experimental Physics Control Systems},
+ publisher = {JACoW Publishing, Geneva, Switzerland},
+ year = {2020},
+ volume = {ICALEPCS2019},
+ pages = {USA},
+ url = {https://jacow.org/icalepcs2019/doi/JACoW-ICALEPCS2019-WEPHA083.html},
+ doi = {10.18429/JACOW-ICALEPCS2019-WEPHA083},
+ copyright = {Creative Commons Attribution 3.0 Unported},
+ keyword = {Accelerator Physics, Device Control and Integrating Diverse Systems},
+ language = {en}
+}
+
+@article{WeberSebastien2021a,
+ author = {Weber, S. J.},
+ title = {PyMoDAQ: An open-source Python-based software for
+modular data acquisition},
+ journal = {Review of Scientific Instruments},
+ publisher = {AIP Publishing},
+ year = {2021},
+ month = {April},
+ number = {4},
+ volume = {92},
+ pages = {045104},
+ doi = {10.1063/5.0032116}
+}
+
+
